[package]
name = "dht-kademlia-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
anyhow = "1.0.42"
thiserror = "1.0.26"
once_cell = "1.8.0"
rand = "0.8.4"

[target.'cfg(unix)'.dependencies]
pnet = "*"

[target.'cfg(windows)'.dependencies]
ipconfig = "*"

[dev-dependencies]
env_logger = "0.9.0"