[package]
name = "dht-kademlia-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "^1.0.41"
serde_repr = "0.1"
anyhow = "1.0.42"
thiserror = "1.0.26"
once_cell = "1.8.0"
rand = "0.8.4"
async-trait = "0.1.51"
futures = "*"
tokio = { version = "1", features = ["rt", "time", "sync", "net", "macros"] }
base64 = "0.13.0"
ulid-generator-rs = { version = "0.0.13", features = ["serde", "uuid"] }
sha-1 = "0.9.8"
hex = "0.4.3"
resolve = "0.2.0"

[target.'cfg(unix)'.dependencies]
pnet = "*"

[target.'cfg(windows)'.dependencies]
ipconfig = "*"

[dev-dependencies]
env_logger = "0.9.0"